modified : change CMakeLists

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,17 +1,21 @@
-cmake_minimum_required(VERSION 3.28)
-project(CMakeSFMLProject LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.10)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+# Nom du projet
+project(CasseBrique)
 
-include(FetchContent)
-FetchContent_Declare(SFML
-        GIT_REPOSITORY https://github.com/SFML/SFML.git
-        GIT_TAG 3.0.2
-        GIT_SHALLOW ON
-        EXCLUDE_FROM_ALL
-        SYSTEM)
-FetchContent_MakeAvailable(SFML)
+# Définir la version du standard C++
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(main src/main.cpp)
-target_compile_features(main PRIVATE cxx_std_17)
-target_link_libraries(main PRIVATE SFML::Graphics)
+include_directories("include")
+
+# Chercher SFML 3
+find_package(SFML 3 COMPONENTS System Window Graphics Audio Network REQUIRED)
+
+file(GLOB_RECURSE SOURCES "src/*.cpp")
+
+# Ajouter ton fichier source
+add_executable(main ${SOURCES})
+
+# Lier SFML aux sources
+target_link_libraries(main PRIVATE sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
