update : add asset file and can print text on screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,11 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 # Ajouter ton fichier source
 add_executable(main ${SOURCES})
 
-# Lier SFML aux sources
+# Copier le dossier assets dans le répertoire de sortie (build) après la build
+add_custom_command(TARGET main POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/asset $<TARGET_FILE_DIR:main>/asset
+)
+
+# Lier SFML aux sources (utiliser les cibles exportées si disponibles)
 target_link_libraries(main PRIVATE sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
